--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
       <!--Your web app's Firebase configuration
          Add here
         Initialize Firebase-->
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+       <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyDgr7YA3ICOwKqF3lTPGt9KPiW_GXifHKE",
-    authDomain: "virtual-pet-76dbb.firebaseapp.com",
-    databaseURL: "https://virtual-pet-76dbb.firebaseio.com",
-    projectId: "virtual-pet-76dbb",
-    storageBucket: "virtual-pet-76dbb.appspot.com",
-    messagingSenderId: "567227153193",
-    appId: "1:567227153193:web:8910bd5312144c38c91538"
+    apiKey: "AIzaSyAuwF4HUDIzH3HaWRn1RWrEhChBwRI1x3c",
+    authDomain: "virtual-pet-67cd9.firebaseapp.com",
+    databaseURL: "https://virtual-pet-67cd9.firebaseio.com",
+    projectId: "virtual-pet-67cd9",
+    storageBucket: "virtual-pet-67cd9.appspot.com",
+    messagingSenderId: "473768691588",
+    appId: "1:473768691588:web:336db66c98d49a6cf8bfd1"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
